--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@
 # Site
 title: 抢手的哥的技术博客
 subtitle: 不会敲代码的老司机不是好厨子
-description:
+description: 欢迎来到抢手的哥的技术博客
 author: 抢手的哥
-language: zh-CN
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://www.jianshu.com/u/6aea1100cc05
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -66,7 +66,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 4
 pagination_dir: page
 
 # Extensions
