--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.2"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.3"
   }
 }
